--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-swiper": "^0.1.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
