--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ocean-academy-OA.github.io/springNet",
+  "homepage": "https://mywebsite.com",
   "name": "oa_site",
   "version": "0.1.0",
   "private": true,
