root name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mywebsite.com",
+  "homepage": "https://ocean-academy-oa.github.io/springNet/",
   "name": "oa_site",
   "version": "0.1.0",
   "private": true,
