--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://springnet.in/",
+  "homepage": "http://springnet.in/",
   "name": "oa_site",
   "version": "0.1.0",
   "private": true,
