--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ocean-academy-oa.github.io/",
+  "homepage": "http://ocean-academy-oa.github.io/springnet/",
   "name": "oa_site",
   "version": "0.1.0",
   "private":false,
