--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://springnet.in/",
   "name": "oa_site",
   "version": "0.1.0",
-  "private":false,
+  "private":true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
