--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
+    "react-recaptcha": "^2.3.10",
     "react-scripts": "4.0.3",
     "react-swiper": "^0.1.5",
     "web-vitals": "^1.1.2"
