--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://springnet.in/",
-  "name": "oa_site",
+  "name": "springnet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
