--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://springnet.in/",
+  "homepage": "https://github.com/oceanacademypuducherry/springnet",
   "name": "springnet",
   "version": "0.1.0",
   "private": true,
